classDiagram
%% 用户核心类
    class User {
        +id: Long
        +openid: String
        +nickname: String
        +addresses: List~Address~
        +createdOrders: List~Order~
        +acceptedOrders: List~Order~
        +sentMessages: List~Message~
        +receivedMessages: List~Message~
        +reviews: List~Review~
        +blacklists: List~Blacklist~
        +getDefaultAddress() Address
    }

%% 地址类
    class Address {
        +id: Long
        +contactName: String
        +contactPhone: String
        +location: String "经度,纬度"
        +detail: String
        +getFullAddress() String
    }

%% 订单类
    class Order {
        +id: Long
        +status: String
        +amount: BigDecimal
        +calculateDistance() Double
    }

%% 支付类
    class Payment {
        +id: Long
        +transactionId: String
        +status: String
    }

%% 消息类（重点优化）
    class Message {
        +id: Long
        +msgType: Enum "TEXT|IMAGE|ORDER|SYSTEM"
        +content: String "加密内容"
        +extras: JSON
        +createdAt: LocalDateTime
        +getDisplayContent() String
    }

%% 评价类
    class Review {
        +id: Long
        +rating: Integer
        +comment: String
    }

%% 黑名单类
    class Blacklist {
        +id: Long
        +createTime: LocalDateTime
    }

%% 关系定义
    User "1" *-- "0..*" Address : "管理"
    User "1" --> "0..*" Order : "创建"
    User "1" --> "0..*" Order : "接受"
    Order "1" *-- "1" Payment : "关联"
    User "1" --> "0..*" Message : "发送"
    User "1" --> "0..*" Message : "接收"
    Order "1" --> "1" Review : "拥有"
    User "1" --> "0..*" Review : "发表"
    User "1" --> "0..*" Blacklist : "拉黑"
    Message "1" --> "0..1" Order : "关联订单"
    Address "1" --> "0..*" Order : "取件地址"
    Address "1" --> "0..*" Order : "送达地址"

%% 消息类型枚举
    class MessageType {
        <<enumeration>>
        TEXT
        IMAGE
        ORDER
        SYSTEM
    }